Htnl and css is ready for template

--- a/src/html/questions.html
+++ b/src/html/questions.html
@@ -12,9 +12,8 @@
             <div class="quizList">
                 <h3>what is your name</h3>
                 <ul class="optionUl">
-                    <li class="optionList active">
-                        <input type="radio" id="firstQue"
-                               name="contact" value="mail"> <a class="optionLink">hello</a></li>
+                    <li class="optionList"><input type="radio" id="firstQue"
+                                                  name="contact" value="mail"> <a class="optionLink">hello</a></li>
                     <li class="optionList"><input type="radio" id="secondQue"
                                                   name="contact" value="mail"> <a class="optionLink">hello</a></li>
                     <li class="optionList"><input type="radio" id="thirdQue" name="contact" value="mail"> <a
