implement the radio button dynamically

--- a/src/html/questions.html
+++ b/src/html/questions.html
@@ -9,38 +9,7 @@
 <div class="container quiz">
     <div class="quizExample quizQuestion" id="quizQuestion">
         <div class="quizQuestion text-left">
-            <div>
-                <h3>Which of the following selector matches a particular element only when it lies inside a particular
-                    element?</h3>
-                <ul class="optionUl">
-                    <li class="optionList"><input type="radio"
-                                                  name="que_1" value="mail"> <a class="optionLink">The Type
-                        Selector</a></li>
-                    <li class="optionList"><input type="radio"
-                                                  name="que_1" value="mail"> <a class="optionLink">The Universal
-                        Selector</a></li>
-                    <li class="optionList"><input type="radio" name="que_1" value="mail"> <a
-                            class="optionLink">The Descendant Selector</a></li>
-                    <li class="optionList"><input type="radio" name="que_1" value="mail"> <a
-                            class="optionLink">The Class Selector</a></li>
-                </ul>
-            </div>
-
-            <!--swcoond -->
-
-            <div>
-                <h3>Which of the following defines a measurement in centimeters?</h3>
-                <ul class="optionUl">
-                    <li class="optionList"><input type="radio"
-                                                  name="que_2" value="mail"> <a class="optionLink">%</a></li>
-                    <li class="optionList"><input type="radio"
-                                                  name="que_2" value="mail"> <a class="optionLink">cm</a></li>
-                    <li class="optionList"><input type="radio" name="que_2" value="mail"> <a
-                            class="optionLink">em</a></li>
-                    <li class="optionList"><input type="radio" name="que_2" value="mail"> <a
-                            class="optionLink">ex</a></li>
-                </ul>
-            </div>
+            <ul id ="optionList"></ul>
         </div>
         <a href="result.html" type="button" class="submit-btn btn btn-default text-uppercase">Submit</a>
     </div>
