add the icons to the result page an apply the style

--- a/src/html/result.html
+++ b/src/html/result.html
@@ -10,52 +10,85 @@
     <div class="quizExample quizResult">
         <h1 class="text-left">Results</h1>
         <div class="resultMessage row">
-            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-                <p class="resultMark">66%</p>
-            </div>
-            <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                <p class="text-left resultPara"><strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of
-                    the
-                    printing
-                    and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            <!--<div class="">-->
 
-                <div class="text-left resultPara">
-                    <p>
-                        <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
-                        typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    </p>
-                    <p><strong>Your Answered:
-                    </strong></p>
-                    <p>option 1</p>
-                </div>
 
-                <div class="text-left resultPara">
-                    <p>
-                        <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
-                        typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    </p>
-                    <p><strong>Your Answered:
-                    </strong></p>
-                    <p>option 1</p>
+            <!--</div>-->
+            <div class="">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                    <div class="resultMark">66%</div>
                 </div>
-                <div class="text-left resultPara">
-                    <p>
-                        <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
-                        typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    </p>
-                    <p><strong>Your Answered:
-                    </strong></p>
-                    <p>option 1</p>
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                    <div class="text-left resultPara">
+                        <p><strong>pass/fail message</strong> Lorem Ipsum is simply dummy text
+                            of
+                            the
+                            printing
+                            and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                    </div>
+
                 </div>
             </div>
 
+            <div class="">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">
+                    <img class=" resultFalse " src="https://png.icons8.com/ios/22/FFFFFF/delete-sign.png">
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                    <div class="text-left resultPara">
+                        <p>
+                            <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                        <p><strong>Your Answered:
+                        </strong></p>
+                        <p>option 1</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">
+                    <img class="resultTrue" src="https://png.icons8.com/material/20/FFFFFF/checkmark.png">
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 ">
+                    <div class="text-left resultPara">
+                        <p>
+                            <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                        <p><strong>Your Answered:
+                        </strong></p>
+                        <p>option 1</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">
+                    <img class="resultTrue" src="https://png.icons8.com/material/20/FFFFFF/checkmark.png">
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                    <div class="text-left resultPara">
+                        <p>
+                            <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
+                            typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                        <p><strong>Your Answered:
+                        </strong></p>
+                        <p>option 1</p>
+                    </div>
+                </div>
+
+            </div>
         </div>
-        <a href="" type="button" class="btn btn-default text-uppercase">Submit</a>
     </div>
+    <a href="" type="button" class="btn btn-default text-uppercase">Submit</a>
+</div>
 
 </div>
 
