try to make pagination

--- a/src/html/result.html
+++ b/src/html/result.html
@@ -16,7 +16,7 @@
             <!--</div>-->
             <div class="">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <div class="resultMark">66%</div>
+                    <span class="resultMark">66%</span>
                 </div>
                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
                     <div class="text-left resultPara">
@@ -89,9 +89,6 @@
     </div>
     <a href="" type="button" class="btn btn-default text-uppercase">Submit</a>
 </div>
-
-</div>
-
 
 <script type="text/javascript" src="../vendors/jquery.js"></script>
 <script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
