--- a/src/html/questions.html
+++ b/src/html/questions.html
@@ -6,14 +6,15 @@
     <link href="../css/main.css" rel="stylesheet">
 </head>
 <body>
-<div class="container quiz">
+<div class="container">
     <div class="quizExample quizQuestion" id="quizQuestion">
-        <div class="quizQuestion text-left">
-            <ul id ="optionList"></ul>
+        <div class="quizQuestion text-left ">
+            <div id="questionsList">
+            </div>
+            <a href="result.html" type="button" class="submit-btn btn btn-default text-uppercase">Submit</a>
         </div>
-        <a href="result.html" type="button" class="submit-btn btn btn-default text-uppercase">Submit</a>
-    </div>
 
+    </div>
 
 </div>
 
