--- a/src/html/result.html
+++ b/src/html/result.html
@@ -14,80 +14,85 @@
 
 
             <!--</div>-->
-            <div class="">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                    <span class="resultMark">66%</span>
-                </div>
-                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                    <div class="text-left resultPara">
-                        <p><strong>pass/fail message</strong> Lorem Ipsum is simply dummy text
-                            of
-                            the
-                            printing
-                            and typesetting
-                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-                    </div>
 
-                </div>
-            </div>
-
-            <div class="">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">
-                    <img class=" resultFalse " src="https://png.icons8.com/ios/22/FFFFFF/delete-sign.png">
-                </div>
-                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                    <div class="text-left resultPara">
-                        <p>
-                            <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
-                            typesetting
-                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        </p>
-                        <p><strong>Your Answered:
-                        </strong></p>
-                        <p>option 1</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">
-                    <img class="resultTrue" src="https://png.icons8.com/material/20/FFFFFF/checkmark.png">
-                </div>
-                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 ">
-                    <div class="text-left resultPara">
-                        <p>
-                            <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
-                            typesetting
-                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        </p>
-                        <p><strong>Your Answered:
-                        </strong></p>
-                        <p>option 1</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">
-                    <img class="resultTrue" src="https://png.icons8.com/material/20/FFFFFF/checkmark.png">
-                </div>
-                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                    <div class="text-left resultPara">
-                        <p>
-                            <strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and
-                            typesetting
-                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        </p>
-                        <p><strong>Your Answered:
-                        </strong></p>
-                        <p>option 1</p>
-                    </div>
-                </div>
+            <div id="results">
 
             </div>
+            <a href="" type="button" class="btn btn-default text-uppercase">Submit</a>
+            <!--<div class="">-->
+                <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">-->
+                    <!--<span class="resultMark">66%</span>-->
+                <!--</div>-->
+                <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">-->
+                    <!--<div class="text-left resultPara">-->
+                        <!--<p><strong>pass/fail message</strong> Lorem Ipsum is simply dummy text-->
+                            <!--of-->
+                            <!--the-->
+                            <!--printing-->
+                            <!--and typesetting-->
+                            <!--industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>-->
+                    <!--</div>-->
+
+                <!--</div>-->
+            <!--</div>-->
+
+            <!--<div class="">-->
+                <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">-->
+                    <!--<img class=" resultFalse " src="https://png.icons8.com/ios/22/FFFFFF/delete-sign.png">-->
+                <!--</div>-->
+                <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">-->
+                    <!--<div class="text-left resultPara">-->
+                        <!--<p>-->
+                            <!--<strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and-->
+                            <!--typesetting-->
+                            <!--industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,-->
+                        <!--</p>-->
+                        <!--<p><strong>Your Answered:-->
+                        <!--</strong></p>-->
+                        <!--<p>option 1</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+
+            <!--<div class="">-->
+                <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">-->
+                    <!--<img class="resultTrue" src="https://png.icons8.com/material/20/FFFFFF/checkmark.png">-->
+                <!--</div>-->
+                <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 ">-->
+                    <!--<div class="text-left resultPara">-->
+                        <!--<p>-->
+                            <!--<strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and-->
+                            <!--typesetting-->
+                            <!--industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,-->
+                        <!--</p>-->
+                        <!--<p><strong>Your Answered:-->
+                        <!--</strong></p>-->
+                        <!--<p>option 1</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+
+            <!--<div class="">-->
+                <!--<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 icons text-right">-->
+                    <!--<img class="resultTrue" src="https://png.icons8.com/material/20/FFFFFF/checkmark.png">-->
+                <!--</div>-->
+                <!--<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">-->
+                    <!--<div class="text-left resultPara">-->
+                        <!--<p>-->
+                            <!--<strong>pass/fail message</strong> Lorem Ipsum is simply dummy text of the printing and-->
+                            <!--typesetting-->
+                            <!--industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,-->
+                        <!--</p>-->
+                        <!--<p><strong>Your Answered:-->
+                        <!--</strong></p>-->
+                        <!--<p>option 1</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+            <!--</div>-->
         </div>
     </div>
-    <a href="" type="button" class="btn btn-default text-uppercase">Submit</a>
+
 </div>
 
 <script type="text/javascript" src="../vendors/jquery.js"></script>
