add the prefix and animations

--- a/src/html/questions.html
+++ b/src/html/questions.html
@@ -9,13 +9,13 @@
 <div class="container">
     <div class="quizExample quizQuestion" id="quizQuestion">
         <div class="quizQuestion text-left ">
-            <div id="questionsList">
+            <div id="questionsList" class="optionsList slide active">
+                <span class="arrow"> arrow</span>
             </div>
-            <a href="result.html" type="button" class="submit-btn btn btn-default text-uppercase">Submit</a>
+
+            <a href="" type="button" class="sub btn btn-default text-uppercase">Submit</a>
         </div>
-
     </div>
-
 </div>
 
 
