--- a/src/html/questions.html
+++ b/src/html/questions.html
@@ -10,11 +10,9 @@
     <div class="quizExample quizQuestion" id="quizQuestion">
         <div class="quizQuestion text-left ">
             <div id="questionsList" class="optionsList slide active">
-                <span class="arrow"> arrow</span>
             </div>
-
-            <a href="" type="button" class="sub btn btn-default text-uppercase">Submit</a>
         </div>
+        <a href="result.html" type="button" class="submit-btn btn btn-default text-uppercase">Submit</a>
     </div>
 </div>
 
